tests/errors/import_missing.orus
fn main() {
    import "tests/modules/not_there.orus"
}
